# repro-bazel-python-proto-import-error

./: .bazelrc  README.md  WORKSPACE
distinct_directory/protos/: BUILD.bazel  distinct_directory_proto.proto
distinct_directory/protos/sub_dependency/: BUILD.bazel  sub_dependency_proto.proto
hello_world_printer/protos/: BUILD.bazel  same_directory_proto.proto
hello_world_printer/src/: BUILD.bazel  bin.sh  defs.bzl  hello_world.py  hello_world_test.py
